--- a/myanmar.html
+++ b/myanmar.html
@@ -2,88 +2,201 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../assets/img/favicon.png">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>
-    Hayman Capital - Myanmar
-  </title>
-  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
-  <!--     Fonts and icons     -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
-  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/images/apple-icon.png">
+    <link rel="icon" type="image/png" href="./assets/images/favicon.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>
+        Hayman Capital - Myanmar
+    </title>
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+    <!--     Fonts and icons     -->
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link href="./vendor/now-ui/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="./vendor/now-ui/css/now-ui-kit.css?v=1.2.0" rel="stylesheet" />
+    <!-- Vendor CSS Files -->
+    <link href="./vendor/now-ui/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="./vendor/now-ui/css/now-ui-kit.css?v=1.2.0" rel="stylesheet" />
 
-  <!-- Main CSS Files -->
-  <link href="./css/test.css" rel="stylesheet" />
+    <!-- Main CSS Files -->
+    <link href="./css/test.css" rel="stylesheet" />
+    <link href="./css/style.css" rel="stylesheet" />
 </head>
+
 <body class="landing-page sidebar-collapse">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
-      <div class="container">
-        <div class="dropdown button-dropdown">
-          <a href="#pablo" class="dropdown-toggle" id="navbarDropdown" data-toggle="dropdown">
-            <span class="button-bar"></span>
-            <span class="button-bar"></span>
-            <span class="button-bar"></span>
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-header">Dropdown header</a>
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">One more separated link</a>
-          </div>
+        <div class="container">
+            <div class="dropdown button-dropdown">
+                <img class="nav-logo" src="/assets/images/logo_no_text.png">
+            </div>
+            <div class="navbar-translate">
+                <a class="navbar-brand" href="./" rel="tooltip" data-placement="bottom" target="_blank">
+                    Hayman Capital
+                </a>
+                <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
+                    aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-bar top-bar"></span>
+                    <span class="navbar-toggler-bar middle-bar"></span>
+                    <span class="navbar-toggler-bar bottom-bar"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse justify-content-end bg-primary" id="navigation">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="projectDropdown" data-toggle="dropdown">Projects</a>
+                        <div class="dropdown-menu" aria-labelledby="projectDropdown">
+                            <a class="dropdown-item" href="myanmar.html">Myanmar</a>
+                            <a class="dropdown-item" href="indonesia.html">Indonesia</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="management.html">Management Team</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="navbar-translate">
-          <a class="navbar-brand" href="https://demos.creative-tim.com/now-ui-kit/index.html" rel="tooltip" title="Designed by Invision. Coded by Creative Tim" data-placement="bottom" target="_blank">
-            Now Ui Kit
-          </a>
-          <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-bar top-bar"></span>
-            <span class="navbar-toggler-bar middle-bar"></span>
-            <span class="navbar-toggler-bar bottom-bar"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="../assets/img/blurred-image-1.jpg">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="../index.html">Back to Kit</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://github.com/creativetimofficial/now-ui-kit/issues">Have an issue?</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank">
-                <i class="fab fa-twitter"></i>
-                <p class="d-lg-none d-xl-none">Twitter</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank">
-                <i class="fab fa-facebook-square"></i>
-                <p class="d-lg-none d-xl-none">Facebook</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial" target="_blank">
-                <i class="fab fa-instagram"></i>
-                <p class="d-lg-none d-xl-none">Instagram</p>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
     </nav>
     <!-- End Navbar -->
 
+    <section class="wrapper landing">
+        <div class="page-header page-header-small">
+            <div class="page-header-image relative" data-parallax="true" style="background-image: url('./assets/images/background/backdrop_singapore.jpg');">
+                <div class="overlay"></div>
+            </div>
+            <div class="content-center">
+                <div class="container">
+                    <h1 class="title no-margin landing__title landing__title--myanmar">Hayman Capital Company Limited</h1>
+                    <p>Dynamically growing Microfinance Institution (MFI) in Myanmar</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container about-us d-flex flex-row justify-content-between flex-wrap">
+            <img class="d-flex logo--content" src="/assets/images/logo_microfinance.png" />
+            <div class="about-us__content align-self-center">
+                <p>A fully licensed deposit-taking MFI owned 100% by Hayman Capital Pte Ltd.</p>
+                <p>Since its operations in July 2015 (est. 2014), our MFI holds a solid financial position underpinned by a prudent governance, strong management team and esteemed staff/ stakeholders.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="section vision-mission">
+        <img class="backdrop opaque img-fluid about-us__backdrop" src="/assets/images/background/backdrop_logo.png">
+        <div class="container">
+            <div class="vm__content">
+                <div class="vision">
+                    <h1 class="title no-margin">83%</h1>
+                    <p>Bankable Population</p>
+                    <p>Our MFI specializes in fulfilling the market gap through in-dept sector knowledge and skilled advisory services to provide customized solutions in growth of small business in rural and urban areas.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <svg id="" preserveAspectRatio="xMidYMax meet" class="svg-separator sep1" viewBox="0 0 1600 100" style="" data-height="100">
+      <path class="" style="opacity: 1;fill: rgba(0, 0, 0, 0.15);" d="M1040,56c0.5,0,1,0,1.6,0c-16.6-8.9-36.4-15.7-66.4-15.7c-56,0-76.8,23.7-106.9,41C881.1,89.3,895.6,96,920,96
+      C979.5,96,980,56,1040,56z"></path>
+      <path class="" style="opacity: 1;fill: rgba(0, 0, 0, 0.15);" d="M1699.8,96l0,10H1946l-0.3-6.9c0,0,0,0-88,0s-88.6-58.8-176.5-58.8c-51.4,0-73,20.1-99.6,36.8
+      c14.5,9.6,29.6,18.9,58.4,18.9C1699.8,96,1699.8,96,1699.8,96z"></path>
+      <path class="" style="opacity: 1;fill: rgba(0, 0, 0, 0.15);" d="M1400,96c19.5,0,32.7-4.3,43.7-10c-35.2-17.3-54.1-45.7-115.5-45.7c-32.3,0-52.8,7.9-70.2,17.8
+      c6.4-1.3,13.6-2.1,22-2.1C1340.1,56,1340.3,96,1400,96z"></path>
+      <path class="" style="opacity: 1;fill: rgba(0, 0, 0, 0.15);" d="M320,56c6.6,0,12.4,0.5,17.7,1.3c-17-9.6-37.3-17-68.5-17c-60.4,0-79.5,27.8-114,45.2
+      c11.2,6,24.6,10.5,44.8,10.5C260,96,259.9,56,320,56z"></path>
+      <path class="" style="opacity: 1;fill: rgba(0, 0, 0, 0.15);" d="M680,96c23.7,0,38.1-6.3,50.5-13.9C699.6,64.8,679,40.3,622.2,40.3c-30,0-49.8,6.8-66.3,15.8
+      c1.3,0,2.7-0.1,4.1-0.1C619.7,56,620.2,96,680,96z"></path>
+      <path class="" style="opacity: 1;fill: rgba(0, 0, 0, 0.15);" d="M-40,95.6c28.3,0,43.3-8.7,57.4-18C-9.6,60.8-31,40.2-83.2,40.2c-14.3,0-26.3,1.6-36.8,4.2V106h60V96L-40,95.6
+      z"></path>
+      <path class="" style="opacity: 1;fill: rgba(0, 0, 0, 0.1);" d="M504,73.4c-2.6-0.8-5.7-1.4-9.6-1.4c-19.4,0-19.6,13-39,13c-19.4,0-19.5-13-39-13c-14,0-18,6.7-26.3,10.4
+      C402.4,89.9,416.7,96,440,96C472.5,96,487.5,84.2,504,73.4z"></path>
+      <path class="" style="opacity: 1;fill: rgba(0, 0, 0, 0.1);" d="M1205.4,85c-0.2,0-0.4,0-0.6,0c-19.5,0-19.5-13-39-13s-19.4,12.9-39,12.9c0,0-5.9,0-12.3,0.1
+      c11.4,6.3,24.9,11,45.5,11C1180.6,96,1194.1,91.2,1205.4,85z"></path>
+      <path class="" style="opacity: 1;fill: rgba(0, 0, 0, 0.1);" d="M1447.4,83.9c-2.4,0.7-5.2,1.1-8.6,1.1c-19.3,0-19.6-13-39-13s-19.6,13-39,13c-3,0-5.5-0.3-7.7-0.8
+      c11.6,6.6,25.4,11.8,46.9,11.8C1421.8,96,1435.7,90.7,1447.4,83.9z"></path>
+      <path class="" style="opacity: 1;fill: rgba(0, 0, 0, 0.1);" d="M985.8,72c-17.6,0.8-18.3,13-37,13c-19.4,0-19.5-13-39-13c-18.2,0-19.6,11.4-35.5,12.8
+      c11.4,6.3,25,11.2,45.7,11.2C953.7,96,968.5,83.2,985.8,72z"></path>
+      <path class="" style="opacity: 1;fill: rgba(0, 0, 0, 0.1);" d="M743.8,73.5c-10.3,3.4-13.6,11.5-29,11.5c-19.4,0-19.5-13-39-13s-19.5,13-39,13c-0.9,0-1.7,0-2.5-0.1
+      c11.4,6.3,25,11.1,45.7,11.1C712.4,96,727.3,84.2,743.8,73.5z"></path>
+      <path class="" style="opacity: 1;fill: rgba(0, 0, 0, 0.1);" d="M265.5,72.3c-1.5-0.2-3.2-0.3-5.1-0.3c-19.4,0-19.6,13-39,13c-19.4,0-19.6-13-39-13
+      c-15.9,0-18.9,8.7-30.1,11.9C164.1,90.6,178,96,200,96C233.7,96,248.4,83.4,265.5,72.3z"></path>
+      <path class="" style="opacity: 1;fill: rgba(0, 0, 0, 0.1);" d="M1692.3,96V85c0,0,0,0-19.5,0s-19.6-13-39-13s-19.6,13-39,13c-0.1,0-0.2,0-0.4,0c11.4,6.2,24.9,11,45.6,11
+      C1669.9,96,1684.8,96,1692.3,96z"></path>
+      <path class="" style="opacity: 1;fill: rgba(0, 0, 0, 0.1);" d="M25.5,72C6,72,6.1,84.9-13.5,84.9L-20,85v8.9C0.7,90.1,12.6,80.6,25.9,72C25.8,72,25.7,72,25.5,72z"></path>
+      <path class="" style="fill: rgba(0,0,0,0.05);" d="M-40,95.6C20.3,95.6,20.1,56,80,56s60,40,120,40s59.9-40,120-40s60.3,40,120,40s60.3-40,120-40
+      s60.2,40,120,40s60.1-40,120-40s60.5,40,120,40s60-40,120-40s60.4,40,120,40s59.9-40,120-40s60.3,40,120,40s60.2-40,120-40
+      s60.2,40,120,40s59.8,0,59.8,0l0.2,143H-60V96L-40,95.6z"></path>
+    </svg>
+
+
+    <section class="wrapper section solution">
+        <div class="container">
+            <h1 class="title text-center">Our Solutions</h1>
+            <div class="d-flex flex-row flex-wrap justify-content-around solution__items">
+              <div class="solution__item">
+                  <p>Fast Loan</p>
+              </div>
+              <div class="solution__item">
+                  <p>Affordable Fees</p>
+              </div>
+              <div class="solution__item">
+                  <p>Accessibility</p>
+              </div>
+              <div class="solution__item">
+                  <p>Financial Literacy</p>
+              </div>
+            </div>
+        </div>
+        <div class="container">
+            <h1 class="title text-center">Core Products</h1>
+            <div class="d-flex flex-row flex-wrap justify-content-around solution__items">
+              <div class="solution__item">
+                  <p>Fast Loan</p>
+              </div>
+              <div class="solution__item">
+                  <p>Affordable Fees</p>
+              </div>
+              <div class="solution__item">
+                  <p>Accessibility</p>
+              </div>
+              <div class="solution__item">
+                  <p>Financial Literacy</p>
+              </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="wrapper section core-values text-white bg-cyan">
+        <div class="container">
+            <h1 class="title text-center text-white">Core Values</h1>
+            <p class="text-center">WE BELIEVE IN VALUE CREATION FROM:</p>
+            <ul>
+                <li class="core-values__text">Highest level of ethical standards, professional integrity, corporate governance and regulatory compliance.</li>
+                <li class="core-values__text">Financial Inclusion and Innovation, Women Empowerment and commitments towards Social Responsibility.</li>
+                <li class="core-values__text">Synergistic partnership with our subsidiaries.</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Footer starts -->
+    <footer class="footer footer-default">
+        <div class="container">
+            <nav>
+            <p class="copyright">600 North Bridge Road, #23-01 Parkview Square, Singapore 188778</p>
+            </nav>
+            <div class="copyright" id="copyright">
+            &copy;
+            <script>
+                document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
+            </script>
+            <a href="https://www.hayman-capital.com" target="_blank">Hayman Capital</a>.
+            </div>
+        </div>
+    </footer>
+    <!-- Footer ends -->
 
     <!-- Vendor Javascript file imports -->
     <script src="./vendor/now-ui/js/core/jquery.min.js" type="text/javascript"></script>
@@ -98,10 +211,13 @@
     <!--  Google Maps Plugin    -->
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
     <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
-    <script src="./vendor/now-ui/js/now-ui-kit.js?v=1.2.0" type="text/javascript"></script>
-    <script src="./vendor/now-ui/js/now-ui-kit.js?v=1.2.0" type="text/javascript"></script>
+    <script src="./vendor/now-ui/js/now-ui-kit.min.js?v=1.2.0" type="text/javascript"></script>
+
+    <!-- Chartjs Library -->
+    <script src="./vendor/chartjs/js/chart.bundle.min.js" type="text/javascript"></script>
 
     <!-- Main Javascript file imports -->
     <script src="./js/main.js" type="text/javascript"></script>
 </body>
+
 </html>
