Draft myanmar page version, add charts

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </section>
 
     <section class="section vision-mission">
-        <img class="backdrop opaque img-fluid about-us__backdrop" src="/assets/images/background/backdrop_logo.png">
+        <img class="backdrop opaque img-fluid about-us__backdrop backdrop--home" src="/assets/images/background/backdrop_logo.png">
         <div class="container">
             <div class="vm__content">
                 <div class="vision">
