--- a/myanmar.html
+++ b/myanmar.html
@@ -61,7 +61,7 @@
 
     <section class="wrapper landing">
         <div class="page-header page-header-small">
-            <div class="page-header-image relative" data-parallax="true" style="background-image: url('./assets/images/background/backdrop_singapore.jpg');">
+            <div class="page-header-image relative" data-parallax="true" style="background-image: url('./assets/images/background/bagan.jpg');">
                 <div class="overlay"></div>
             </div>
             <div class="content-center">
@@ -84,14 +84,24 @@
     </section>
 
     <section class="section vision-mission">
-        <img class="backdrop opaque img-fluid about-us__backdrop" src="/assets/images/background/backdrop_logo.png">
+        <img class="backdrop opaque img-fluid about-us__backdrop backdrop--myanmar" src="/assets/images/background/backdrop_logo.png">
         <div class="container">
-            <div class="vm__content">
-                <div class="vision">
-                    <h1 class="title no-margin">83%</h1>
-                    <p>Bankable Population</p>
-                    <p>Our MFI specializes in fulfilling the market gap through in-dept sector knowledge and skilled advisory services to provide customized solutions in growth of small business in rural and urban areas.
-                    </p>
+            <div class="d-flex flex-row flex-wrap justify-content-between">
+                <div class="text-center">
+                    <h1 class="title no-margin">53<span class="small">k+</span></h1>
+                    <p>Active Borrowers</p>
+                </div>
+                <div class="text-center">
+                    <h1 class="title no-margin">76<span class="small">%</span></h1>
+                    <p>Women</p>
+                </div>
+                <div class="text-center">
+                    <h1 class="title no-margin">60<span class="small">%</span></h1>
+                    <p>Rural</p>
+                </div>
+                <div class="text-center">
+                    <h1 class="title no-margin">15</h1>
+                    <p>Branches</p>
                 </div>
             </div>
         </div>
@@ -132,52 +142,106 @@
     </svg>
 
 
-    <section class="wrapper section solution">
-        <div class="container">
-            <h1 class="title text-center">Our Solutions</h1>
+    <section class="wrapper solution">
+        <div class="container section">
+            <h1 class="title text-center mb-5">Our Solutions</h1>
             <div class="d-flex flex-row flex-wrap justify-content-around solution__items">
-              <div class="solution__item">
+              <div class="d-flex flex-column justify-content-center solution__item">
+                  <img class="align-self-center solution__item__image mb-3" src="/assets/images/icons/accessibility.png" />
                   <p>Fast Loan</p>
               </div>
-              <div class="solution__item">
+              <div class="d-flex flex-column justify-content-center solution__item">
+                  <img class="align-self-center solution__item__image mb-3" src="/assets/images/icons/affordability.png" />
                   <p>Affordable Fees</p>
               </div>
-              <div class="solution__item">
+              <div class="d-flex flex-column justify-content-center solution__item">
+                  <img class="align-self-center solution__item__image mb-3" src="/assets/images/icons/accessibility.png" />
                   <p>Accessibility</p>
               </div>
-              <div class="solution__item">
+              <div class="d-flex flex-column justify-content-center solution__item">
+                  <img class="align-self-center solution__item__image mb-3" src="/assets/images/icons/financial_literacy.png" />
                   <p>Financial Literacy</p>
               </div>
             </div>
         </div>
-        <div class="container">
-            <h1 class="title text-center">Core Products</h1>
+        <div class="container section">
+            <h1 class="title text-center mb-5">Core Products</h1>
             <div class="d-flex flex-row flex-wrap justify-content-around solution__items">
-              <div class="solution__item">
-                  <p>Fast Loan</p>
-              </div>
-              <div class="solution__item">
-                  <p>Affordable Fees</p>
-              </div>
-              <div class="solution__item">
-                  <p>Accessibility</p>
-              </div>
-              <div class="solution__item">
-                  <p>Financial Literacy</p>
-              </div>
+                <div class="card solution__item" style="width: 20rem;">
+                    <img class="card-img-top card-img-top--icon" src="/assets/images/icons/group.png" alt="Card image cap">
+                    <div class="card-body text-center">
+                        <h4 class="card-title bold">Group Loan</h4>
+                        <p class="card-text">2.5% monthly interest<br/>~ US$ 80 to 840</p>
+                    </div>
+                </div>
+                <div class="card solution__item" style="width: 20rem;">
+                    <img class="card-img-top card-img-top--icon" src="/assets/images/icons/saving.png" alt="Card image cap">
+                    <div class="card-body text-center">
+                        <h4 class="card-title bold">Individual Loan</h4>
+                        <p class="card-text">2.5% monthly interest<br/>~ US$ 1000 to 4200</p>
+                    </div>
+                </div>
+                <div class="card solution__item" style="width: 20rem;">
+                    <img class="card-img-top card-img-top--icon" src="/assets/images/icons/saving.png" alt="Card image cap">
+                    <div class="card-body text-center">
+                        <h4 class="card-title bold">Saving Products</h4>
+                        <p class="card-text">0.8% - 1.25%<br/>monthly interest</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 
-    <section class="wrapper section core-values text-white bg-cyan">
+    <!-- <section class="wrapper landing">
+        <div class="page-header page-header-small">
+            <div class="page-header-image" data-parallax="true" style="background-image: url('./assets/images/background/bagan.jpg');"></div>
+            <div class="container">
+
+            </div>
+        </div>
+    </section> -->
+
+    <section class="wrapper section">
         <div class="container">
-            <h1 class="title text-center text-white">Core Values</h1>
-            <p class="text-center">WE BELIEVE IN VALUE CREATION FROM:</p>
-            <ul>
-                <li class="core-values__text">Highest level of ethical standards, professional integrity, corporate governance and regulatory compliance.</li>
-                <li class="core-values__text">Financial Inclusion and Innovation, Women Empowerment and commitments towards Social Responsibility.</li>
-                <li class="core-values__text">Synergistic partnership with our subsidiaries.</li>
-            </ul>
+            <div class="d-flex flex-row justify-content-between">
+                <div class="chart">
+                    <canvas id="clientSegmentation" width="400" height="400"></canvas>
+                </div>
+                <div class="d-flex align-items-center">
+                    <p class="stats__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="wrapper section stats">
+        <div class="container">
+            <div class="d-flex flex-row justify-content-between">
+                <div class="d-flex align-items-center">
+                    <p class="stats__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+                <div class="chart">
+                    <canvas id="loanPortfolio" width="400" height="400"></canvas>
+                    <span class="small">PAR>30 days: 0.44%  (this risk ratio needs to be put below the chart)</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="wrapper section">
+        <div class="container">
+            <h2 class="title text-center">Competitive Advantages (Work in Progress)</h2>
+            <ol>
+                <li class="core-values__text">Shareholders commitment to grow the business.</li>
+                <li class="core-values__text">Experienced Senior Management.</li>
+                <li class="core-values__text">Offices and Loan officers close to clients.</li>
+                <li class="core-values__text">Quick loan tracking time.</li>
+                <li class="core-values__text">Well-documented manuals and operational procedures.</li>
+                <li class="core-values__text">Latest banking CLOUD base MIS.</li>
+                <li class="core-values__text">Flexible products tailored to client specifics.</li>
+            </ol>
+            <div class="d-flex justify-content-center section">
+                <a href="https://www.hayman-capital.com.mm" target="_blank" class="btn btn-primary btn-round">Explore more</a>
+            </div>
         </div>
     </section>
 
