--- a/myanmar.html
+++ b/myanmar.html
@@ -147,20 +147,20 @@
             <h1 class="title text-center mb-5">Our Solutions</h1>
             <div class="d-flex flex-row flex-wrap justify-content-around solution__items">
               <div class="d-flex flex-column justify-content-center solution__item">
-                  <img class="align-self-center solution__item__image mb-3" src="/assets/images/icons/accessibility.png" />
-                  <p>Fast Loan</p>
+                  <img class="align-self-center solution__item__image mb-3" src="/assets/images/icons/fast_loan.png" />
+                  <p class="text-center">Fast Loan</p>
               </div>
               <div class="d-flex flex-column justify-content-center solution__item">
                   <img class="align-self-center solution__item__image mb-3" src="/assets/images/icons/affordability.png" />
-                  <p>Affordable Fees</p>
+                  <p class="text-center">Affordable Fees</p>
               </div>
               <div class="d-flex flex-column justify-content-center solution__item">
                   <img class="align-self-center solution__item__image mb-3" src="/assets/images/icons/accessibility.png" />
-                  <p>Accessibility</p>
+                  <p class="text-center">Accessibility</p>
               </div>
               <div class="d-flex flex-column justify-content-center solution__item">
                   <img class="align-self-center solution__item__image mb-3" src="/assets/images/icons/financial_literacy.png" />
-                  <p>Financial Literacy</p>
+                  <p class="text-center">Financial Literacy</p>
               </div>
             </div>
         </div>
@@ -203,7 +203,7 @@
 
     <section class="wrapper section">
         <div class="container">
-            <div class="d-flex flex-row justify-content-between">
+            <div class="d-flex flex-row justify-content-between flex-wrap">
                 <div class="chart">
                     <canvas id="clientSegmentation" width="400" height="400"></canvas>
                 </div>
@@ -215,7 +215,7 @@
     </section>
     <section class="wrapper section stats">
         <div class="container">
-            <div class="d-flex flex-row justify-content-between">
+            <div class="d-flex flex-row justify-content-between flex-wrap">
                 <div class="d-flex align-items-center">
                     <p class="stats__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                 </div>
