--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <section class="wrapper landing">
         <div class="page-header page-header-small">
-            <div class="page-header-image relative" data-parallax="true" style="background-image: url('./assets/images/background/backdrop_singapore.jpg');">
+            <div class="page-header-image relative page-header--main" data-parallax="true" style="background-image: url('./assets/images/background/singapore3.jpg');">
                 <div class="overlay"></div>
             </div>
             <div class="content-center">
@@ -75,11 +75,13 @@
     </section>
 
     <section class="section">
-        <div class="container about-us d-flex flex-row justify-content-between">
+        <div class="container about-us d-flex flex-row justify-content-between flex-wrap">
             <img class="d-flex logo--content" src="/assets/images/logo.png" />
             <div class="about-us__content align-self-center">
                 <h1 class="title">About Us</h1>
-                <p>Hayman Capital Pte. Ltd is an investment and management company, registered and based in Singapore, with specific investments focus on and extensive country expertise in Myanmar, Vietnam and Indonesia.</p>
+                <p>Hayman Capital Pte. Ltd is an investment and management company, registered and based in Singapore,
+                    with specific investments focus on and extensive country expertise in Myanmar, Vietnam and
+                    Indonesia.</p>
             </div>
         </div>
     </section>
@@ -94,7 +96,9 @@
                 </div>
                 <div class="mission">
                     <h2 class="title">Mission</h2>
-                    <p>To achieve sound financial health with sustainable value addition to all our stakeholders by delivering a world-class service through the blending of state-of-the-art technology and visionary management in partnership with competent and committed staff </p>
+                    <p>To achieve sound financial health with sustainable value addition to all our stakeholders by
+                        delivering a world-class service through the blending of state-of-the-art technology and
+                        visionary management in partnership with competent and committed staff </p>
                 </div>
             </div>
         </div>
@@ -105,8 +109,10 @@
             <h1 class="title text-center text-white">Core Values</h1>
             <p class="text-center">WE BELIEVE IN VALUE CREATION FROM:</p>
             <ul>
-                <li class="core-values__text">Highest level of ethical standards, professional integrity, corporate governance and regulatory compliance.</li>
-                <li class="core-values__text">Financial Inclusion and Innovation, Women Empowerment and commitments towards Social Responsibility.</li>
+                <li class="core-values__text">Highest level of ethical standards, professional integrity, corporate
+                    governance and regulatory compliance.</li>
+                <li class="core-values__text">Financial Inclusion and Innovation, Women Empowerment and commitments
+                    towards Social Responsibility.</li>
                 <li class="core-values__text">Synergistic partnership with our subsidiaries.</li>
             </ul>
         </div>
@@ -114,16 +120,34 @@
 
     <!-- Footer starts -->
     <footer class="footer footer-default">
+        <div class="container footer__form">
+            <form class="form d-flex flex-row justify-content-center" action="https://formspree.io/minmawtheinko.morgan@gmail.com" method="POST" />
+                <div class="card-body contact-wrapper justify-content-center">
+                    <h3 class="text-center mb-3">Contact Us</h3>
+                    <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard.</p>
+                    <div class="input-group no-border input-lg">
+                        <input type="email" class="form-control" placeholder="Your email...">
+                    </div>
+                    <div class="input-group no-border input-lg">
+                        <textarea type="text" class="form-control contact-message" id="message" rows="3" placeholder="Your message..."></textarea>
+                    </div>
+                    <div class="d-flex flex-row justify-content-center">
+                        <button type="submit" class="btn btn-primary btn-round">Submit</a>
+                    </div>
+                </div>
+            </form>
+        </div>
         <div class="container">
             <nav>
-            <p class="copyright">600 North Bridge Road, #23-01 Parkview Square, Singapore 188778</p>
+                <p class="copyright">600 North Bridge Road, #23-01 Parkview Square, Singapore 188778</p>
             </nav>
             <div class="copyright" id="copyright">
-            &copy;
-            <script>
-                document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-            </script>
-            <a href="https://www.hayman-capital.com" target="_blank">Hayman Capital</a>.
+                &copy;
+                <script>
+                    document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
+                </script>
+                <a href="https://www.hayman-capital.com" target="_blank">Hayman Capital</a>.
             </div>
         </div>
     </footer>
