--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <h1 class="title text-center text-white">Core Values</h1>
             <div class="flex-row d-sm-flex justify-content-between">
                 <p class="text-center core-values__text">Highest level of ethical standards, professional integrity, corporate governance and regulatory compliance.</p>
-                <p class="text-center core-values__text">Financial Inclusion and Innovation, Women Empowerment and commitments towards Social Responsibility.</p>
+                <p class="text-center core-values__text">Financial Inclusion, Women Empowerment and commitments towards Social Responsibility.</p>
                 <p class="text-center core-values__text">Synergistic partnership with our subsidiaries.</p>
             </div>
         </div>
