fix styles and responsive issues

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <img class="nav-logo" src="/assets/images/logo_no_text.png">
             </div>
             <div class="navbar-translate">
-                <a class="navbar-brand" href="./" rel="tooltip" data-placement="bottom" target="_blank">
+                <a class="navbar-brand" href="./" rel="tooltip" data-placement="bottom">
                     Hayman Capital
                 </a>
                 <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
@@ -75,7 +75,7 @@
     </section>
 
     <section class="section">
-        <div class="container about-us d-flex flex-row justify-content-between flex-wrap">
+        <div class="container about-us d-flex flex-row justify-content-around flex-wrap">
             <img class="d-flex logo--content" src="/assets/images/logo.png" />
             <div class="about-us__content align-self-center">
                 <h1 class="title">About Us</h1>
@@ -89,7 +89,7 @@
     <section class="section vision-mission">
         <img class="backdrop opaque img-fluid about-us__backdrop backdrop--home" src="/assets/images/background/backdrop_logo.png">
         <div class="container">
-            <div class="vm__content">
+            <div class="vm__content text-center">
                 <div class="vision">
                     <h2 class="title">Vision</h2>
                     <p>To become a leading investment capital company in South East Asia. </p>
