--- a/management.html
+++ b/management.html
@@ -2,88 +2,156 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../assets/img/favicon.png">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>
-    Hayman Capital - Management Team
-  </title>
-  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
-  <!--     Fonts and icons     -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
-  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <meta charset="utf-8" />
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/images/apple-icon.png">
+    <link rel="icon" type="image/png" href="./assets/images/favicon.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>
+        Hayman Capital - Management Team
+    </title>
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+    <!--     Fonts and icons     -->
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link href="./vendor/now-ui/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="./vendor/now-ui/css/now-ui-kit.css?v=1.2.0" rel="stylesheet" />
+    <!-- Vendor CSS Files -->
+    <link href="./vendor/now-ui/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="./vendor/now-ui/css/now-ui-kit.css?v=1.2.0" rel="stylesheet" />
 
-  <!-- Main CSS Files -->
-  <link href="./css/test.css" rel="stylesheet" />
+    <!-- Main CSS Files -->
+    <link href="./css/test.css" rel="stylesheet" />
+    <link href="./css/style.css" rel="stylesheet" />
 </head>
+
 <body class="landing-page sidebar-collapse">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
-      <div class="container">
-        <div class="dropdown button-dropdown">
-          <a href="#pablo" class="dropdown-toggle" id="navbarDropdown" data-toggle="dropdown">
-            <span class="button-bar"></span>
-            <span class="button-bar"></span>
-            <span class="button-bar"></span>
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-header">Dropdown header</a>
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">One more separated link</a>
-          </div>
+        <div class="container">
+            <div class="dropdown button-dropdown">
+                <img class="nav-logo" src="/assets/images/logo_no_text.png">
+            </div>
+            <div class="navbar-translate">
+                <a class="navbar-brand" href="./" rel="tooltip" data-placement="bottom">
+                    Hayman Capital
+                </a>
+                <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
+                    aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-bar top-bar"></span>
+                    <span class="navbar-toggler-bar middle-bar"></span>
+                    <span class="navbar-toggler-bar bottom-bar"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse justify-content-end bg-primary" id="navigation">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="projectDropdown" data-toggle="dropdown">Projects</a>
+                        <div class="dropdown-menu" aria-labelledby="projectDropdown">
+                            <a class="dropdown-item" href="myanmar.html">Myanmar</a>
+                            <a class="dropdown-item" href="indonesia.html">Indonesia</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="management.html">Management Team</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="navbar-translate">
-          <a class="navbar-brand" href="https://demos.creative-tim.com/now-ui-kit/index.html" rel="tooltip" title="Designed by Invision. Coded by Creative Tim" data-placement="bottom" target="_blank">
-            Now Ui Kit
-          </a>
-          <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-bar top-bar"></span>
-            <span class="navbar-toggler-bar middle-bar"></span>
-            <span class="navbar-toggler-bar bottom-bar"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse justify-content-end" id="navigation" data-nav-image="../assets/img/blurred-image-1.jpg">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="../index.html">Back to Kit</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://github.com/creativetimofficial/now-ui-kit/issues">Have an issue?</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank">
-                <i class="fab fa-twitter"></i>
-                <p class="d-lg-none d-xl-none">Twitter</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank">
-                <i class="fab fa-facebook-square"></i>
-                <p class="d-lg-none d-xl-none">Facebook</p>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial" target="_blank">
-                <i class="fab fa-instagram"></i>
-                <p class="d-lg-none d-xl-none">Instagram</p>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
     </nav>
     <!-- End Navbar -->
 
+    <section class="wrapper landing">
+        <div class="page-header page-header-small">
+            <div class="page-header-image relative page-header--main" data-parallax="true" style="background-image: url('./assets/images/background/singapore3.jpg');">
+                <div class="overlay"></div>
+            </div>
+            <div class="content-center">
+                <div class="container">
+                    <h5 class="no-margin bold">HAYMAN CAPITAL</h5>
+                    <h1 class="title no-margin landing__title">MANGEMENT TEAM</h1>
+                    <p>Prime investments in financial services across a rapidly growing Southeast Asia region.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container about-us d-flex flex-row justify-content-around flex-wrap">
+            <img class="d-flex logo--content" src="/assets/images/logo.png" />
+            <div class="about-us__content align-self-center">
+                <h1 class="title">About Us</h1>
+                <p>Hayman Capital Pte. Ltd is an investment and management company, registered and based in Singapore,
+                    with specific investments focus on and extensive country expertise in Myanmar, Vietnam and
+                    Indonesia.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="section vision-mission">
+        <img class="backdrop opaque img-fluid about-us__backdrop backdrop--home" src="/assets/images/background/backdrop_logo.png">
+        <div class="container">
+            <div class="vm__content text-center">
+                <div class="vision">
+                    <h2 class="title">Vision</h2>
+                    <p>To become a leading investment capital company in South East Asia. </p>
+                </div>
+                <div class="mission">
+                    <h2 class="title">Mission</h2>
+                    <p>To achieve sound financial health with sustainable value addition to all our stakeholders by
+                        delivering a world-class service through the blending of state-of-the-art technology and
+                        visionary management in partnership with competent and committed staff </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="wrapper section core-values text-white bg-cyan">
+        <div class="container">
+            <h1 class="title text-center text-white">Core Values</h1>
+            <p class="text-center">WE BELIEVE IN VALUE CREATION FROM:</p>
+            <ul>
+                <li class="core-values__text">Highest level of ethical standards, professional integrity, corporate
+                    governance and regulatory compliance.</li>
+                <li class="core-values__text">Financial Inclusion and Innovation, Women Empowerment and commitments
+                    towards Social Responsibility.</li>
+                <li class="core-values__text">Synergistic partnership with our subsidiaries.</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Footer starts -->
+    <footer class="footer footer-default">
+        <div class="container footer__form">
+            <form class="form d-flex flex-row justify-content-center" action="https://formspree.io/minmawtheinko.morgan@gmail.com" method="POST" />
+                <div class="card-body contact-wrapper justify-content-center">
+                    <h3 class="text-center mb-3">Contact Us</h3>
+                    <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard.</p>
+                    <div class="input-group no-border input-lg">
+                        <input type="email" class="form-control" placeholder="Your email...">
+                    </div>
+                    <div class="input-group no-border input-lg">
+                        <textarea type="text" class="form-control contact-message" id="message" rows="3" placeholder="Your message..."></textarea>
+                    </div>
+                    <div class="d-flex flex-row justify-content-center">
+                        <button type="submit" class="btn btn-primary btn-round">Submit</a>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="container">
+            <nav>
+                <p class="copyright">600 North Bridge Road, #23-01 Parkview Square, Singapore 188778</p>
+            </nav>
+            <div class="copyright" id="copyright">
+                &copy;
+                <script>
+                    document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
+                </script>
+                <a href="https://www.hayman-capital.com" target="_blank">Hayman Capital</a>.
+            </div>
+        </div>
+    </footer>
+    <!-- Footer ends -->
 
     <!-- Vendor Javascript file imports -->
     <script src="./vendor/now-ui/js/core/jquery.min.js" type="text/javascript"></script>
@@ -98,10 +166,10 @@
     <!--  Google Maps Plugin    -->
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
     <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
-    <script src="./vendor/now-ui/js/now-ui-kit.js?v=1.2.0" type="text/javascript"></script>
-    <script src="./vendor/now-ui/js/now-ui-kit.js?v=1.2.0" type="text/javascript"></script>
+    <script src="./vendor/now-ui/js/now-ui-kit.min.js?v=1.2.0" type="text/javascript"></script>
 
     <!-- Main Javascript file imports -->
     <script src="./js/main.js" type="text/javascript"></script>
 </body>
+
 </html>
