add contact page

--- a/index.html
+++ b/index.html
@@ -27,12 +27,9 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
         <div class="container">
-            <div class="dropdown button-dropdown logo-button">
-                <img class="nav-logo" src="/assets/images/logo_no_text.png">
-            </div>
             <div class="navbar-translate">
                 <a class="navbar-brand" href="./" rel="tooltip" data-placement="bottom">
-                    Hayman Capital
+                    <img class="nav-logo" src="/assets/images/hayman_horizontal_white.png">
                 </a>
                 <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
                     aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +48,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="management.html">Management Team</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -124,8 +121,6 @@
             <form class="form d-flex flex-row justify-content-center" action="https://formspree.io/minmawtheinko.morgan@gmail.com" method="POST" />
                 <div class="card-body contact-wrapper justify-content-center">
                     <h3 class="text-center mb-3">Contact Us</h3>
-                    <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's standard.</p>
                     <div class="input-group no-border input-lg">
                         <input type="email" class="form-control" placeholder="Your email...">
                     </div>
@@ -140,7 +135,8 @@
         </div>
         <div class="container">
             <nav>
-                <p class="copyright">600 North Bridge Road, #23-01 Parkview Square, Singapore 188778</p>
+                <p class="">Hayman Capital Pte Ltd (UEN: 2014261186N)<br/></p>
+                <p class="">Address: 600 North Bridge Road, #10-01, Parkview Square, Singapore 188778</p>
             </nav>
             <div class="copyright" id="copyright">
                 &copy;
