--- a/myanmar.html
+++ b/myanmar.html
@@ -27,12 +27,9 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top navbar-transparent " color-on-scroll="400">
         <div class="container">
-            <div class="dropdown button-dropdown logo-button">
-                <img class="nav-logo" src="/assets/images/logo_no_text.png">
-            </div>
             <div class="navbar-translate">
                 <a class="navbar-brand" href="./" rel="tooltip" data-placement="bottom">
-                    Hayman Capital
+                    <img class="nav-logo" src="/assets/images/hayman_horizontal_white.png">
                 </a>
                 <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
                     aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +48,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="management.html">Management Team</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -79,7 +76,7 @@
             <div class="about-us__content align-self-center">
                 <p>A fully licensed deposit-taking MFI owned 100% by Hayman Capital Pte Ltd.</p>
                 <p>Since its operations in July 2015 (est. 2014), our MFI holds a solid financial position underpinned
-                    by a prudent governance, strong management team and esteemed staff/ stakeholders.</p>
+                    by a prudent governance, strong Contact and esteemed staff/ stakeholders.</p>
             </div>
         </div>
     </section>
@@ -89,19 +86,19 @@
         <div class="container">
             <div class="d-flex flex-row flex-wrap justify-content-between">
                 <div class="text-center">
-                    <h1 class="title no-margin">53<span class="small">k+</span></h1>
+                    <h1 class="title no-margin">65<span class="small">k+</span></h1>
                     <p>Active Borrowers</p>
                 </div>
                 <div class="text-center">
                     <h1 class="title no-margin">76<span class="small">%</span></h1>
-                    <p>Women</p>
+                    <p>Women Client</p>
                 </div>
                 <div class="text-center">
                     <h1 class="title no-margin">60<span class="small">%</span></h1>
-                    <p>Rural</p>
+                    <p>Rural Client</p>
                 </div>
                 <div class="text-center">
-                    <h1 class="title no-margin">15</h1>
+                    <h1 class="title no-margin">14</h1>
                     <p>Branches</p>
                 </div>
             </div>
@@ -111,7 +108,7 @@
 
     <section class="wrapper solution">
         <div class="container section">
-            <h1 class="title text-center mb-5">Our Solutions</h1>
+            <h1 class="title text-center mb-5">Solutions towards Market Gap</h1>
             <div class="d-flex flex-row flex-wrap justify-content-around solution__items">
                 <div class="d-flex flex-column justify-content-center solution__item">
                     <img class="align-self-center solution__item__image mb-3" src="/assets/images/icons/fast_loan.png" />
@@ -142,7 +139,7 @@
                     </div>
                 </div>
                 <div class="card solution__item" style="width: 20rem;">
-                    <img class="card-img-top card-img-top--icon" src="/assets/images/icons/saving.png" alt="Card image cap">
+                    <img class="card-img-top card-img-top--icon" src="/assets/images/icons/individual.png" alt="Card image cap">
                     <div class="card-body text-center">
                         <h4 class="card-title bold">Individual Loan</h4>
                         <p class="card-text">2.5% monthly interest<br />~ US$ 1000 to 4200</p>
@@ -175,9 +172,7 @@
                     <canvas id="clientSegmentation" width="400" height="400"></canvas>
                 </div>
                 <div class="d-flex align-items-center">
-                    <p class="stats__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                        printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <p class="stats__text">Majority of the clients are micro-entrepreneurs and small farmers. Hayman Microfinance specializes in fulfilling the requirements of an institutional mandate through in-depth sector knowledge and skilled advisory services to provide customized solutions in growth of small business in rural and urban areas.</p>
                 </div>
             </div>
         </div>
@@ -186,13 +181,10 @@
         <div class="container">
             <div class="d-flex flex-row justify-content-between flex-wrap">
                 <div class="d-flex align-items-center">
-                    <p class="stats__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                        printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <p class="stats__text">While the number of active borrowers and the outstanding loan portfolio are growing dynamically, the Portfolio At Risk (PAR) ratio for more than 30 days is maintained at 0.44%. MFI being the most promising and important financing vehicle for people in poverty, we are aiming at (1) providing the balance between social objectives to our customers and commercial objectives to our stakeholders and (2) ensuring widespread awareness and engagement among the poor population, and (3) adhering to codes of responsible finance - protecting customers from over indebtedness.</p>
                 </div>
                 <div class="chart">
                     <canvas id="loanPortfolio" width="400" height="400"></canvas>
-                    <span class="small">PAR>30 days: 0.44%</span>
                 </div>
             </div>
         </div>
@@ -213,8 +205,7 @@
                 <p class="blockquote border--secondary comp-adv">Flexible products tailored to client specifics.</p>
             </div>
             <div class="d-flex justify-content-center section">
-                <a href="https://www.hayman-capital.com.mm" target="_blank" class="btn btn-primary btn-round">Explore
-                    more</a>
+                <a href="https://www.hayman-capital.com.mm" target="_blank" class="btn btn-primary btn-round">Explore more on Hayman MFI</a>
             </div>
         </div>
     </section>
@@ -226,8 +217,6 @@
                 method="POST" />
             <div class="card-body contact-wrapper justify-content-center">
                 <h3 class="text-center mb-3">Contact Us</h3>
-                <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard.</p>
                 <div class="input-group no-border input-lg">
                     <input type="email" class="form-control" placeholder="Your email...">
                 </div>
@@ -242,7 +231,8 @@
         </div>
         <div class="container">
             <nav>
-                <p class="copyright">600 North Bridge Road, #23-01 Parkview Square, Singapore 188778</p>
+                <p class="">Hayman Capital Pte Ltd (UEN: 2014261186N)<br/></p>
+                <p class="">Address: 600 North Bridge Road, #10-01, Parkview Square, Singapore 188778</p>
             </nav>
             <div class="copyright" id="copyright">
                 &copy;
@@ -267,7 +257,6 @@
     <script src="./vendor/now-ui/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
     <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
     <script src="./vendor/now-ui/js/now-ui-kit.min.js?v=1.2.0" type="text/javascript"></script>
-
     <!-- Chartjs Library -->
     <script src="./vendor/chartjs/js/chart.bundle.min.js" type="text/javascript"></script>
     <script src="./vendor/chartjs/js/chartjs-plugin-datalabels.min.js" type="text/javascript"></script>
