--- a/indonesia.html
+++ b/indonesia.html
@@ -27,12 +27,9 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-tertiary fixed-top navbar-transparent " color-on-scroll="400">
         <div class="container">
-            <div class="dropdown button-dropdown logo-button">
-                <img class="nav-logo" src="/assets/images/logo_no_text.png">
-            </div>
             <div class="navbar-translate">
                 <a class="navbar-brand" href="./" rel="tooltip" data-placement="bottom">
-                    Hayman Capital
+                    <img class="nav-logo" src="/assets/images/hayman_horizontal_white.png">
                 </a>
                 <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
                     aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +48,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="management.html">Management Team</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -61,7 +58,7 @@
 
     <section class="wrapper landing">
         <div class="page-header page-header-small">
-            <div class="page-header-image relative" data-parallax="true" style="background-image: url('./assets/images/background/bagan.jpg');">
+            <div class="page-header-image relative" data-parallax="true" style="background-image: url('./assets/images/background/background_indonesia.jpg');">
                 <div class="overlay overlay--tertiary"></div>
             </div>
             <div class="content-center">
@@ -79,7 +76,7 @@
             <div class="about-us__content align-self-center">
                 <p>A fully licensed deposit-taking MFI owned 100% by Hayman Capital Pte Ltd.</p>
                 <p>Since its operations in July 2015 (est. 2014), our MFI holds a solid financial position underpinned
-                    by a prudent governance, strong management team and esteemed staff/ stakeholders.</p>
+                    by a prudent governance, strong Contact and esteemed staff/ stakeholders.</p>
             </div>
         </div>
     </section>
@@ -259,8 +256,6 @@
                 method="POST" />
             <div class="card-body contact-wrapper justify-content-center">
                 <h3 class="text-center mb-3">Contact Us</h3>
-                <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard.</p>
                 <div class="input-group no-border input-lg">
                     <input type="email" class="form-control" placeholder="Your email...">
                 </div>
@@ -275,7 +270,8 @@
         </div>
         <div class="container">
             <nav>
-                <p class="copyright">600 North Bridge Road, #23-01 Parkview Square, Singapore 188778</p>
+                <p class="">Hayman Capital Pte Ltd (UEN: 2014261186N)<br/></p>
+                <p class="">Address: 600 North Bridge Road, #10-01, Parkview Square, Singapore 188778</p>
             </nav>
             <div class="copyright" id="copyright">
                 &copy;
