change navbar to white and other content, css fixes

--- a/myanmar.html
+++ b/myanmar.html
@@ -25,7 +25,7 @@
 
 <body class="landing-page sidebar-collapse">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-secondary fixed-top navbar-transparent " color-on-scroll="400">
+    <nav class="navbar navbar-expand-lg fixed-top bg-white">
         <div class="container">
             <div class="navbar-translate">
                 <a class="navbar-brand" href="./" rel="tooltip" data-placement="bottom">
@@ -75,8 +75,7 @@
             <img class="d-flex logo--content" src="/assets/images/logo_microfinance.png" />
             <div class="about-us__content align-self-center">
                 <p>A fully licensed deposit-taking MFI owned 100% by Hayman Capital Pte Ltd.</p>
-                <p>Since its operations in July 2015 (est. 2014), our MFI holds a solid financial position underpinned
-                    by a prudent governance, strong Contact and esteemed staff/ stakeholders.</p>
+                <p>Since its operations in July 2015 (est. 2014), our MFI holds a solid financial position bolstered by a prudent governance, strong Contact and esteemed staff/ stakeholders.</p>
             </div>
         </div>
     </section>
@@ -86,7 +85,7 @@
         <div class="container">
             <div class="d-flex flex-row flex-wrap justify-content-between">
                 <div class="text-center">
-                    <h1 class="title no-margin">65<span class="small">k+</span></h1>
+                    <h1 class="title no-margin">70<span class="small">k+</span></h1>
                     <p>Active Borrowers</p>
                 </div>
                 <div class="text-center">
@@ -110,21 +109,27 @@
         <div class="container section">
             <h1 class="title text-center mb-5">Solutions towards Market Gap</h1>
             <div class="d-flex flex-row flex-wrap justify-content-around solution__items">
-                <div class="d-flex flex-column justify-content-center solution__item">
+                <div class="d-flex flex-column solution__item">
                     <img class="align-self-center solution__item__image mb-3" src="/assets/images/icons/fast_loan.png" />
-                    <p class="text-center">Fast Loan</p>
+                    <p class="text-center bold mb-1">Fast Loan</p>
+                    <p class="solution__item__subtext">Tracking with technology - online & mobile banking</p>
                 </div>
-                <div class="d-flex flex-column justify-content-center solution__item">
+                <div class="d-flex flex-column solution__item">
                     <img class="align-self-center solution__item__image mb-3" src="/assets/images/icons/affordability.png" />
-                    <p class="text-center">Affordable Fees</p>
+                    <p class="text-center bold mb-1">Affordable Fees</p>
+                    <p class="solution__item__subtext">From efficient operations & finance</p>
                 </div>
-                <div class="d-flex flex-column justify-content-center solution__item">
+                <div class="d-flex flex-column solution__item">
                     <img class="align-self-center solution__item__image mb-3" src="/assets/images/icons/accessibility.png" />
-                    <p class="text-center">Accessibility</p>
+                    <p class="text-center bold mb-1">Accessibility</p>
+                    <p class="solution__item__subtext">Brick-and-mortar offices serves as centres for clients in villages and wards</p>
                 </div>
-                <div class="d-flex flex-column justify-content-center solution__item">
-                    <img class="align-self-center solution__item__image mb-3" src="/assets/images/icons/financial_literacy.png" />
-                    <p class="text-center">Financial Literacy</p>
+                <div class="d-flex flex-column solution__item">
+                    <img class="align-self-center solution__item__image mb-3"
+                        src="/assets/images/icons/financial_literacy.png"
+                        />
+                    <p class="text-center bold mb-1">Financial Literacy</p>
+                    <p class="solution__item__subtext">Programmes & CSRs to promote client's well-being</p>
                 </div>
             </div>
         </div>
@@ -181,7 +186,7 @@
         <div class="container">
             <div class="d-flex flex-row justify-content-between flex-wrap">
                 <div class="d-flex align-items-center">
-                    <p class="stats__text">While the number of active borrowers and the outstanding loan portfolio are growing dynamically, the Portfolio At Risk (PAR) ratio for more than 30 days is maintained at 0.44%. MFI being the most promising and important financing vehicle for people in poverty, we are aiming at (1) providing the balance between social objectives to our customers and commercial objectives to our stakeholders and (2) ensuring widespread awareness and engagement among the poor population, and (3) adhering to codes of responsible finance - protecting customers from over indebtedness.</p>
+                    <p class="stats__text">While the number of active borrowers and the outstanding loan portfolio are growing dynamically, the Portfolio At Risk (PAR) ratio for more than 30 days is maintained at less than 1%. MFI being the most promising and important financing vehicle for people in poverty, we are aiming at (1) providing the balance between social objectives to our customers and commercial objectives to our stakeholders and (2) ensuring widespread awareness and engagement among the poor population, and (3) adhering to codes of responsible finance - protecting customers from over indebtedness.</p>
                 </div>
                 <div class="chart">
                     <canvas id="loanPortfolio" width="400" height="400"></canvas>
@@ -232,7 +237,7 @@
         <div class="container">
             <nav>
                 <p class="">Hayman Capital Pte Ltd (UEN: 2014261186N)<br/></p>
-                <p class="">Address: 600 North Bridge Road, #10-01, Parkview Square, Singapore 188778</p>
+                <p class="">600 North Bridge Road, #10-01, Parkview Square, Singapore 188778</p>
             </nav>
             <div class="copyright" id="copyright">
                 &copy;
