--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body class="landing-page sidebar-collapse">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
+    <nav class="navbar navbar-expand-lg fixed-top bg-white">
         <div class="container">
             <div class="navbar-translate">
                 <a class="navbar-brand" href="./" rel="tooltip" data-placement="bottom">
@@ -108,9 +108,8 @@
             <ul>
                 <li class="core-values__text">Highest level of ethical standards, professional integrity, corporate
                     governance and regulatory compliance.</li>
-                <li class="core-values__text">Financial Inclusion and Innovation, Women Empowerment and commitments
-                    towards Social Responsibility.</li>
-                <li class="core-values__text">Synergistic partnership with our subsidiaries.</li>
+                <li class="core-values__text">Financial inclusion and innovation, women empowerment and commitments towards Social Responsibility.</li>
+                <li class="core-values__text">Synergistic partnerships with our subsidiaries and stakeholders.</li>
             </ul>
         </div>
     </section>
@@ -136,7 +135,7 @@
         <div class="container">
             <nav>
                 <p class="">Hayman Capital Pte Ltd (UEN: 2014261186N)<br/></p>
-                <p class="">Address: 600 North Bridge Road, #10-01, Parkview Square, Singapore 188778</p>
+                <p class="">600 North Bridge Road, #10-01, Parkview Square, Singapore 188778</p>
             </nav>
             <div class="copyright" id="copyright">
                 &copy;
